@@ -1,31 +1,0 @@
-/.cvsignore/1.1/Tue Feb 24 17:53:47 2004//
-/ConfigDir.py/1.23/Sat Jan 22 17:39:26 2005//
-/ConfigReader.py/1.28/Tue Oct 11 23:47:57 2005//
-/ConnChoice.py/1.2/Sun Jul 11 02:15:37 2004//
-/CreateIcons.py/1.3/Tue Nov 30 22:03:22 2004//
-/CurrentRateMeasure.py/1.4/Thu May 13 15:14:58 2004//
-/HTTPHandler.py/1.6/Fri Dec 17 00:28:48 2004//
-/PSYCO.py/1.1/Tue Feb 24 17:53:47 2004//
-/RateLimiter.py/1.12/Mon Jul 12 14:37:18 2004//
-/RateMeasure.py/1.7/Tue Dec 28 19:32:36 2004//
-/RawServer.py/1.29/Tue Apr 26 17:56:25 2005//
-/ServerPortHandler.py/1.12/Mon Dec 19 01:00:59 2005//
-/SocketHandler.py/1.28/Wed Mar 23 16:58:21 2005//
-/bencode.py/1.13/Fri Dec 31 19:35:35 2004//
-/bitfield.py/1.11/Thu Apr 14 16:35:12 2005//
-/clock.py/1.2/Thu May 13 16:18:05 2004//
-/download_bt1.py/1.70/Sat Mar  4 05:53:16 2006//
-/inifile.py/1.3/Wed Jan  5 20:21:53 2005//
-/iprangeparse.py/1.3/Sun Aug  7 05:58:22 2005//
-/launchmanycore.py/1.35/Sun Aug  7 05:58:23 2005//
-/natpunch.py/1.11/Wed Dec 15 03:56:16 2004//
-/parseargs.py/1.5/Tue May 25 19:00:58 2004//
-/parsedir.py/1.16/Fri Jun 25 17:36:57 2004//
-/piecebuffer.py/1.5/Sat Apr  9 00:39:41 2005//
-/selectpoll.py/1.4/Sat Jul 10 21:54:53 2004//
-/subnetparse.py/1.8/Sat Aug 20 02:11:08 2005//
-/torrentlistparse.py/1.2/Tue Dec 21 22:14:09 2004//
-/zurllib.py/1.11/Sat May 21 23:35:09 2005//
-D/BT1////
-/__init__.py/1.35/Tue Oct 10 04:18:23 2006//
-D/GUI////
